fixed contrast ratio issue

--- a/src/styles/components/contact-card.scss
+++ b/src/styles/components/contact-card.scss
@@ -44,7 +44,7 @@
   .contact-country {
     font-weight: lighter;
     font-size: 12px;
-    color: #ab5858;
+    color: #ad2f2f;
   }
   .actions {
     display: none;
