--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -1,7 +1,7 @@
 $primary: #7C616C;
 $primary-transparent: #7c616c91;
 $secondary: #D1B1CB;
-$tertiary: #dfd2dc;
+$tertiary: #ebdce7;
 $accent: #E5E9EC;
 $warning: #fa0060;
 $bg: #EAFDF8;
